--- a/Qasja.html
+++ b/Qasja.html
@@ -15,15 +15,15 @@
         <form action="#">
             <div class="mb-3">
                 <label for="username" class="form-label">Emri i p&euml;rdoruesit:</label>
-                <input type="text" class="form-control" id="username" autofocus style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2);">
+                <input type="text" class="form-control" id="username" autofocus style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2); color: white;">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Fjal&euml;kalimi:</label>
-                <input type="password" class="form-control" id="password" autocomplete="current-password" style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2);">
+                <input type="password" class="form-control" id="password" autocomplete="current-password" style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2); color: white;">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="remember">
-                <label for="remember" class="form-check-label text-secondary">Ruaj</label>
+                <label for="remember" class="form-check-label text-secondary" style="color: white;">Ruaj</label>
             </div>
             
             <button type="button" class="btn btn-login w-100 mb-3" style="background-color: rgb(162, 101, 220); border-color: rgb(162, 101, 220); padding: 0.5rem 2rem; font-size: 1rem; color: #ffffff;" onclick="Timeout()">Qasja</button>
