--- a/WalkingD.html
+++ b/WalkingD.html
@@ -38,6 +38,23 @@
         text-align: center;
         color:white;
     }
+    #showTitle {
+      font-size: 24px;
+      color: white;
+      font-style: italic;
+    }
+
+    #userRatings {
+      font-size: 15px;
+      color: white;
+      
+    }
+
+    #averageRating {
+      font-size: 15px;
+      color: white;
+      
+    }
   </style>
 </head>
 <body>
@@ -58,6 +75,29 @@
         <h2>The Walking Dead</h2>
         <p>Me Morganin n&euml; zon&euml;n e sigurt, Rik dhe t&euml; tjer&euml;t mendojn&euml; nj&euml; plan p&euml;r t&euml; larguar nj&euml; turm&euml; t&euml; infektuarish nga Aleksandria, por di&ccedil;ka e v&euml; gjith&euml; komunitetin n&euml; rrezik.</p>
       </section>
+      <h3 id="showTitle"></h3>
+      <p id="userRatings"></p>
+      <p id="averageRating"></p>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+
+            const showTitle = "The Walking Dead";
+            const userRatings = [5, 4, 4, 3, 5];
+
+            const averageRating = calculateAverageRating(userRatings);
+
+            document.getElementById('showTitle').innerText = `Detaje te tjera: ${showTitle}`;
+            document.getElementById('userRatings').innerText = `Vleresimet e shikuesve: ${userRatings.join(', ')}`;
+            document.getElementById('averageRating').innerText = `Mesatarja e vleresimit: ${averageRating.toFixed(2)}`;
+
+            function calculateAverageRating(ratings) {
+                const sum = ratings.reduce((total, rating) => total + rating, 0);
+                const average = sum / ratings.length;
+                return average;
+            }
+        });
+    </script>
     </main>
     <footer>
       <div class="footer-copyright">
