--- a/Umbrella.html
+++ b/Umbrella.html
@@ -38,6 +38,23 @@
         text-align: center;
         color:white;
     }
+    #showTitle {
+      font-size: 24px;
+      color: white;
+      font-style: italic;
+    }
+
+    #userRatings {
+      font-size: 15px;
+      color: white;
+      
+    }
+
+    #averageRating {
+      font-size: 15px;
+      color: white;
+      
+    }
   </style>
 </head>
 <body>
@@ -58,6 +75,29 @@
         <h2>The Umbrella Academy</h2>
         <p>Pasi kan&euml; ndalur apokalipsin, an&euml;tar&euml;t e Akademis&euml; Umbrella kthehen n&euml; sht&euml;pi, vet&euml;m p&euml;r t&euml; zbuluar se po jetojn&euml; n&euml; nj&euml; t&euml; ardhme alternative, n&euml; t&euml; cil&euml;n, ata vet&euml; nuk kan&euml; ekzistuar kurr&euml;. N&euml; vend t&euml; tyre, Reginald Hargreeves ka adoptuar nj&euml; grup t&euml; ndrysh&euml;m f&euml;mij&euml;sh me superfuqi dhe i quajti ata Akademia Sparrou. Tashm&euml;, an&euml;tar&euml;t e dy akademive, do t&euml; gjenden n&euml; nj&euml; situat&euml; q&euml; do t&euml; p&euml;piqen ta zgjidhin sipas m&euml;nyrave t&euml; tyre...</p>
       </section>
+      <h3 id="showTitle"></h3>
+      <p id="userRatings"></p>
+      <p id="averageRating"></p>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+
+            const showTitle = "The Umbrella Academy";
+            const userRatings = [4, 4, 5, 3, 4];
+
+            const averageRating = calculateAverageRating(userRatings);
+
+            document.getElementById('showTitle').innerText = `Detaje te tjera: ${showTitle}`;
+            document.getElementById('userRatings').innerText = `Vleresimet e shikuesve: ${userRatings.join(', ')}`;
+            document.getElementById('averageRating').innerText = `Mesatarja e vleresimit: ${averageRating.toFixed(2)}`;
+
+            function calculateAverageRating(ratings) {
+                const sum = ratings.reduce((total, rating) => total + rating, 0);
+                const average = sum / ratings.length;
+                return average;
+            }
+        });
+    </script>
     </main>
 
     <footer>
