--- a/Qasja.html
+++ b/Qasja.html
@@ -28,6 +28,7 @@
             
             <button type="button" class="btn btn-login w-100 mb-3" style="background-color: rgb(162, 101, 220); border-color: rgb(162, 101, 220); padding: 0.5rem 2rem; font-size: 1rem; color: #ffffff;" onclick="Timeout()">Qasja</button>
         </form>
+        <div id="output" class="text-center" style="color: #3cb4e6;"></div>
 
         <div class="text-center">
             <small>Nuk keni nj&euml; llogari? <a href="Regjistrimi.html" class="btn-link fw-bold" style="color: rgb(162, 101, 220); text-decoration: none;">Regjistrohu</a></small>
@@ -37,11 +38,12 @@
     <script>
         function Timeout() {
             var count = 0;
+            var outputDiv = document.getElementById('output');
             
             for (var i = 0; i < 5; i++) {
                 setTimeout(function () {
                     count++;
-                    alert('Butoni eshte klikuar pas ' + count * 2 + ' sekondash!');
+                    outputDiv.innerHTML = '<p>Butoni eshte klikuar pas ' + count * 2 + ' sekondash!</p>';
                 }, i * 2000);
             }
         }
