--- a/Regjistrimi.html
+++ b/Regjistrimi.html
@@ -242,6 +242,7 @@
             </div>
                 <button type="submit">Krijo</button>
             </form>
+            <div id="output"></div>
         </div>
     </div>
     <script>
@@ -284,6 +285,7 @@
                 alert("Fjalekalimet nuk jane te njejta.");
                 return false;
             }
+            
 
         const birthdayRegex = /^\d{2}-\d{2}-\d{4}$/;
         if (!birthdayRegex.test(birthday)) {
@@ -293,6 +295,10 @@
 
         alert("Llogaria juaj është krijuar me sukses!");
         return true;
+
+        const outputDiv = document.getElementById('output');
+            outputDiv.innerHTML = '<p>Llogaria juaj është krijuar me sukses!</p>';
+            return false;
     }
     </script>
     
