--- a/meteshikuarat.html
+++ b/meteshikuarat.html
@@ -95,7 +95,7 @@
         </div>
     </div>
     <svg width="1350px" height="30px">
-        <rect x="20" y="20" width="1350px" height="30px" fill="rgb(162, 101, 220)"/>
+        <rect x="20" y="20" width="100%" height="30px" fill="rgb(162, 101, 220)"/>
     </svg>
     <br><br><br>
     <br><br>
