--- a/meterejat.html
+++ b/meterejat.html
@@ -18,12 +18,13 @@
 
     form {
         text-align: center;
-        width: 30%; /* Increased form width */
+        width: 30%; 
         margin-left: 70px;
-        background-color: #2c3e50; /* Dark background color */
+        margin-right:30px;
+        background-color: #2d0d31; 
         padding: 20px;
         border-radius: 10px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Box shadow for a card-like effect */
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); 
     }
 
     label {
@@ -34,23 +35,23 @@
     }
 
     #movieInput {
-        width: 100%; /* Full width input */
+        width: 100%; 
         padding: 12px;
         box-sizing: border-box;
-        border: 2px solid #3498db; /* Blue border */
+        border: 2px solid #b57dc0; 
         border-radius: 8px;
         font-size: 16px;
         outline: none;
         margin-bottom: 15px;
-        background-color: #ecf0f1; /* Light background color */
+        background-color: #ecf0f1; 
     }
 
     #movieInput:focus {
-        border-color: #e74c3c; /* Red border on focus */
+        border-color: #e74c3c; 
     }
 
     #submitBtn {
-        background-color: #e74c3c; /* Red button color */
+        background-color: #e74c3c; 
         color: #fff;
         padding: 15px 25px;
         font-size: 20px;
@@ -61,7 +62,7 @@
     }
 
     #submitBtn:hover {
-        background-color: #c0392b; /* Darker red on hover */
+        background-color: #c0392b; 
     }
 
     h1 {
@@ -360,7 +361,7 @@
     </script>
 
 <form onsubmit="submitForm(); return false;">
-    <label for="movieInput">Shkruaj per të parë detajet e filmave me te rinjë:</label>
+    <label for="movieInput">Shkruaj p&euml;r t&euml; par&euml; detajet e filmave m&euml; t&euml; ri:</label>
     <input type="text" id="movieInput" name="movieInput" list="movies" placeholder="Shkruaj ose selekto një film" required>
     <datalist id="movies">
         <option value="What if...?">
