--- a/filmat.html
+++ b/filmat.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <form style="width: 100%; height: 70px; display: flex; justify-content: flex-end; padding: 15px;">
-        <input style="width: 200px; margin-right: 15px;" type="text" id="movieSearch" name="movieSearch" list="movieSuggestions" placeholder="Search for a movie...">
+        <input style="width: 200px; margin-right: 15px;" type="text" id="movieSearch" name="movieSearch" list="movieSuggestions" placeholder="K&euml;rko nj&euml; film...">
         
         <datalist style id="movieSuggestions">
             <option value="Ratatouille">
@@ -57,7 +57,7 @@
             <option value="The new boy">
         </datalist>
     
-        <button type="submit" >Search</button>
+        <button type="submit" >K&euml;rko</button>
     </form>
     <div class="container" style="margin: 0 auto;">
         <div class="content-container" >
