--- a/meterejat.html
+++ b/meterejat.html
@@ -375,7 +375,7 @@
         <option value="Leave The World Behind">
         <option value="Saltburn">
     </datalist>
-    <input type="submit" value="See Details">
+    <input type="submit" value="Shiko detajet">
 </form>
 
 
