--- a/filmihacker.html
+++ b/filmihacker.html
@@ -55,7 +55,7 @@
             <h1 >Hacker | 2016</h1>
         <br>
         <br>
-        <p>Me ndihm&euml;n e miqve t&euml; tij t&euml; rinj, Alex Danyliuk kthehet n&euml; nj&euml; jet&euml; krimi dhe vjedhje identiteti.</p>
+        <p><b>Me ndihm&euml;n e miqve t&euml; tij t&euml; rinj, Alex Danyliuk kthehet n&euml; nj&euml; jet&euml; krimi dhe vjedhje identiteti.</b></p>
         <br>
         <br>
         <a href="hacker.html"_blank>
