--- a/Umbrella.html
+++ b/Umbrella.html
@@ -59,10 +59,11 @@
             </script>
     <footer>
         <div class="footer-copyright">
-            <p>Copyright &copy; and &reg; Since
+            <p><mark>Copyright &copy; and &reg; Since
                 <script>
                     document.write(new Date().toLocaleDateString())
                  </script> 
+                 </mark>
           </div>
     </footer>
  </div>
