--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
         <hr class="footer-hr">
         <div class="footer-content">
           <div class="footer-middle">
-            <h2 class="footer-heading">Rrjetet Sociale</h2>
+            <h2 class="footer-heading"><i>Rrjetet Sociale</i></h2>
             <ul class="footer-middle-list icons">
               <a class="footer-links" href="https://www.facebook.com/" target="_blank"><i
                   class="fab fa-facebook-f facebook" style="color:blueviolet"></i></a>
@@ -591,7 +591,7 @@
             </ul>
           </div>
           <div class="footer-middle">
-            <h2 class="footer-heading">Sh&euml;rbimet</h2>
+            <h2 class="footer-heading"><i>Sh&euml;rbimet</i></h2>
             <ul class="footer-middle-list">
               <li class="footer-middle-list-item"><a href="filmat.html">Filmat</a></li>
               <li class="footer-middle-list-item"><a href="serialet.html">Serialet</a></li>
@@ -607,9 +607,9 @@
           </div>
           <div class="footer-right" style="z-index: 3;">
             <p class="footer-links">
-            <h2 class="footer-heading">Kontakti</h2>
+            <h2 class="footer-heading"><i>Kontakti</i></h2>
             <p class="footer-bottom-tagline">Mund t&euml; na kontaktoni</p>
-            <a class="footer-contact-button" href="Kontakti.html">Kontakti</a>
+            <a class="footer-contact-button" href="Kontakti.html"><u>Kontakti</u></a>
             </p>
           </div>
         </div>
