--- a/filmihacker.html
+++ b/filmihacker.html
@@ -48,7 +48,7 @@
 <body>
     
     <div class="card">
-        <img src="img/hacker.jpg" >
+        <img src="img/hacker.jpg"  style="float: left;  margin-right: 10px; " >
     </div>
         <div class="paragraf" style="color: blueviolet;font-family: Arial, Helvetica, sans-serif;text-align: right; ; 
         margin-right: 40px; ">
