--- a/meteshikuarat.html
+++ b/meteshikuarat.html
@@ -58,6 +58,7 @@
         border-collapse: collapse;
         margin-left: 40px;
         margin-right: 49px;
+        width: 95%;
       }
       th, td {
         border: 1px solid #966fd6;
@@ -71,6 +72,8 @@
       .images{
         max-width: 100px;
         height: auto;
+        float: right;
+        margin-left: 0px;
       }
         
         
